-----------------
HISTORY OF FMEDIA
-----------------

 "+" - new feature
 "*" - change, update or a small improvement
 "-" - bugfix
 "!" - broken compatibility


fmedia v1.18 - Jul 4, 2020

 + Pulse: support 8-bit playback
 + help.txt: Spanish translation
 * core: skip unknown modules in fmedia-user.conf
 * file.in, file.out: can use thread pool for asynchronous I/O
 - --split: .mp3 output: corrupted first frame
 - .raw: reading didn't work
 - ID3v2 read: fix parsing frame data with 'unsync' flag
 - .flac read: couldn't skip corrupted meta block
 * use BSD 2-Clause License


fmedia v1.17 - Apr 30, 2020

 + GUI: remember the current active track and playlist scroll position
 + GUI (Linux): mark the currently playing track
 + --capture-buffer argument - Length (in msec) of the capture buffer (WASAPI, ALSA)
 - Linux: core.so: don't use glibc 2.29


fmedia (Android) v0.3 - Mar 15, 2020

 + Record audio button
 + setting: Show 'Record' Button
 + setting: Directory for Recordings
 + save/restore playlist scroll position


fmedia v1.16 - Mar 8, 2020

 + GUI: new command: List -> Read Meta Tags
 + GUI (Windows): "file_delete_method" configuration setting
 + queue: stop playback after many consecutive errors
 * cue: support INDEX value with 'minutes' value 100 and higher
 - GUI (Windows): invalid filename was added to playlist after recording (v1.11 bug)


fmedia v1.15 - Feb 2, 2020

 + Linux: support JACK capture
 + Linux: disable system sleep timer while playing
 * Linux: automatically use ALSA output when Pulse isn't installed
   e.g. "libpulse.so.0" is not found

 * --listdev is more reliable
   Show capture devices list even if playback devices list couldn't be shown

 - .m4a write: .m4a(AAC) files created by fmedia couldn't be opened
     by other players, e.g. VLC (v1.10 bug)
   fmedia can read those files with no problems.

 *! config: don't override "output" if it's already initialized
    e.g. for this configuration:

    output "pulse.out"
    output "alsa.out"
